# lobo-builder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/autonomy-hub-astro-site/: SKILL.md
.agents/skills/autonomy-hub-fastapi-backend/: SKILL.md
.agents/skills/autonomy-hub-mission-runtime/: SKILL.md
.agents/skills/lobo-mission-prep/: SKILL.md
.codex/agents/: architect.toml  backend-implementer.toml  context-mapper.toml  data-infra-implementer.toml  frontend-implementer.toml  planner.toml  product-spec.toml  release-deploy.toml  verifier-reviewer.toml
apps/site/: AGENTS.md  astro.config.mjs  package-lock.json  package.json
config/agent_profiles/: catalog.yaml
config/intake/: greenfield-questionnaire.yaml
config/policies/: catalog.yaml
config/projects/: asiento-libre.yaml
config/runner_prompts/: architect.md  backend-implementer.md  context-mapper.md  data-infra-implementer.md  default.md  frontend-implementer.md  planner.md  product-spec.md  release-deploy.md  verifier-reviewer.md
config/templates/: catalog.yaml
docs/: architecture.md  railway-reuse.md  spec-forge-audit.md
docs/plans/: adaptive-planner-gpt54.md  multi-repo-missions-v1.md  work-cycles-over-sequential-pipeline.md
src/autonomy_hub/: AGENTS.md  config.py  db.py  main.py
src/autonomy_hub/adapters/: __init__.py  codex_exec.py  command_runner.py  discord.py  filesystem.py  firebase.py  git.py  github.py  railway.py  vercel.py
src/autonomy_hub/api/: routes.py
src/autonomy_hub/domain/: models.py
tests/: test_api.py  test_planner.py  test_runner.py
(+25 files in other folders)
